--- a/src/App.css
+++ b/src/App.css
@@ -7,34 +7,13 @@
   font-family: "Source Sans Pro", sans-serif;
 }
 
-html {
-  font-size: 62.5%;
-}
-
-.main-div {
-  min-height: 100vh;
-  background: #060822;
-  display: flex;
-  justify-content: center;
-  /* align-items: center; */
-}
-
 .child-div {
   text-align: center;
   margin-top: 12rem;
 }
 
-.child-div figure img {
-  width: 10rem;
-  height: 8rem;
-}
 
-.child-div figure figcaption {
-  color: #fff;
-  font-size: 2.2rem;
-  padding-top: 2rem;
-  text-transform: capitalize;
-}
+
 
 input {
   /* display: block; */
@@ -106,6 +85,7 @@ input:focus {
 .showItems {
   margin-top: 3rem;
   text-align: center;
+  padding: 0 30% 0;
 }
 
 .eachItem {
@@ -166,63 +146,4 @@ input:focus {
 
 .eachItem:hover h3 {
   color: rgb(85, 41, 220);
-}
-
-.btn {
-  letter-spacing: 0.1em;
-  cursor: pointer;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 45px;
-  max-width: 160px;
-  position: relative;
-  text-decoration: none;
-  text-transform: uppercase;
-  width: 100%;
-}
-.btn:hover {
-  text-decoration: none;
-}
-
-.effect04 {
-  --uismLinkDisplay: var(--smLinkDisplay, inline-flex);
-  display: var(--uismLinkDisplay);
-  color: #000;
-  outline: solid 2px #000;
-  position: relative;
-  transition-duration: 0.4s;
-  overflow: hidden;
-}
-
-.effect04::before,
-.effect04 span {
-  margin: 0 auto;
-  transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
-  transition-duration: 0.4s;
-}
-
-.effect04:hover {
-  background-color: rgb(85, 41, 220);
-}
-
-.effect04:hover span {
-  -webkit-transform: translateY(-400%) scale(-0.1, 20);
-  transform: translateY(-400%) scale(-0.1, 20);
-}
-
-.effect04::before {
-  content: attr(data-sm-link-text);
-  color: #fff;
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin: auto;
-  -webkit-transform: translateY(500%) scale(-0.1, 20);
-  transform: translateY(500%) scale(-0.1, 20);
-}
-
-.effect04:hover::before {
-  letter-spacing: 0.05em;
-  -webkit-transform: translateY(0) scale(1, 1);
-  transform: translateY(0) scale(1, 1);
 }
